--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+
+    <link rel="stylesheet/css" href="%PUBLIC_URL%/styles/website.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
